--- a/prac/Assembly-CSharp.csproj
+++ b/prac/Assembly-CSharp.csproj
@@ -61,25 +61,26 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\script\camera.cs" />
+    <Compile Include="Assets\script\controller.cs" />
     <Compile Include="Assets\script\enemy.cs" />
     <Compile Include="Assets\script\player_move.cs" />
     <Compile Include="Assets\script\punch_left.cs" />
     <Compile Include="Assets\script\punch_right.cs" />
     <Compile Include="Assets\script\target.cs" />
     <Reference Include="Unity.TextMeshPro.Editor">
-      <HintPath>C:/Download/Unity Hub/workspace/prac/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
+      <HintPath>C:/Users/bohee/Desktop/jongsul/repos/prac/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.PackageManagerUI.Editor">
-      <HintPath>C:/Download/Unity Hub/workspace/prac/Library/ScriptAssemblies/Unity.PackageManagerUI.Editor.dll</HintPath>
+      <HintPath>C:/Users/bohee/Desktop/jongsul/repos/prac/Library/ScriptAssemblies/Unity.PackageManagerUI.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.CollabProxy.Editor">
-      <HintPath>C:/Download/Unity Hub/workspace/prac/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll</HintPath>
+      <HintPath>C:/Users/bohee/Desktop/jongsul/repos/prac/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TextMeshPro">
-      <HintPath>C:/Download/Unity Hub/workspace/prac/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
+      <HintPath>C:/Users/bohee/Desktop/jongsul/repos/prac/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Analytics.DataPrivacy">
-      <HintPath>C:/Download/Unity Hub/workspace/prac/Library/ScriptAssemblies/Unity.Analytics.DataPrivacy.dll</HintPath>
+      <HintPath>C:/Users/bohee/Desktop/jongsul/repos/prac/Library/ScriptAssemblies/Unity.Analytics.DataPrivacy.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.AIModule">
       <HintPath>C:/Download/Unity Hub/Editor/2018.4.18f1/Editor/Data/Managed/UnityEngine/UnityEngine.AIModule.dll</HintPath>
@@ -283,7 +284,7 @@
       <HintPath>C:/Download/Unity Hub/Editor/2018.4.18f1/Editor/Data/UnityExtensions/Unity/UnitySpatialTracking/RuntimeEditor/UnityEngine.SpatialTracking.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Analytics.StandardEvents">
-      <HintPath>C:/Download/Unity Hub/workspace/prac/Library/PackageCache/com.unity.analytics@3.2.3/AnalyticsStandardEvents/Unity.Analytics.StandardEvents.dll</HintPath>
+      <HintPath>C:/Users/bohee/Desktop/jongsul/repos/prac/Library/PackageCache/com.unity.analytics@3.2.3/AnalyticsStandardEvents/Unity.Analytics.StandardEvents.dll</HintPath>
     </Reference>
     <Reference Include="netstandard">
       <HintPath>C:/Download/Unity Hub/Editor/2018.4.18f1/Editor/Data/NetStandard/ref/2.0.0/netstandard.dll</HintPath>
