--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@ TestLeap/[Bb]uild/
 TestLeap/[Bb]uilds/
 TestLeap/[Ll]ogs/
 TestLeap/[Uu]ser[Ss]ettings/
-
+TestLeap/[Aa]ssets/ML-Agents/
 
 
 
@@ -73,3 +73,17 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+
+# Compiled source
+*.com
+*.o
+*.so
+
+### Firebase ###
+.idea
+**/node_modules/*
+**/.firebaserc
+
+### Firebase Patch ###
+.runtimeconfig.json
+.firebase/
